feat(CarService): 모든 자동차가 1번 이동하는 코드 추가